scrape text docs

--- a/data-ingest/main.ipynb
+++ b/data-ingest/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,8 +34,8 @@
     "\n",
     "    # Prepare data storage\n",
     "    data = []\n",
-    "    columns = ['Name', 'Age', 'Gender', 'InterestedIn', 'Style', 'Location', \n",
-    "               'LocationFlexibility', 'Contact', 'LastUpdated']\n",
+    "    columns = ['Name', 'ProfileLink', 'Age', 'Gender', 'InterestedIn', 'Style', \n",
+    "               'Location', 'LocationFlexibility', 'Contact', 'LastUpdated']\n",
     "\n",
     "    # Extract table rows\n",
     "    for row in table.find('tbody').find_all('tr'):\n",
@@ -43,9 +43,15 @@
     "        if len(cells) != 9:\n",
     "            continue\n",
     "\n",
-    "        # Extract data from each cell\n",
+    "        # Extract name and link\n",
+    "        name_link = cells[0].find('a')\n",
+    "        name = name_link.text.strip() if name_link else cells[0].div.text.strip()\n",
+    "        profile_link = name_link['href'] if name_link else ''\n",
+    "\n",
+    "        # Extract remaining data\n",
     "        row_data = {\n",
-    "            'Name': cells[0].find('a').text.strip() if cells[0].find('a') else cells[0].div.text.strip(),\n",
+    "            'Name': name,\n",
+    "            'ProfileLink': profile_link,\n",
     "            'Age': cells[1].div.text.strip(),\n",
     "            'Gender': cells[2].div.text.strip(),\n",
     "            'InterestedIn': ', '.join([span.text.strip() for span in cells[3].div.find_all('span')]) or cells[3].div.text.strip(),\n",
@@ -59,23 +65,302 @@
     "\n",
     "    # Create DataFrame\n",
     "    df = pd.DataFrame(data, columns=columns)\n",
-    "    return df\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing profile links...\n",
+      "\n",
+      "Sample results:\n",
+      "         Name                                        ProfileLink  \\\n",
+      "0       Gabin  https://docs.google.com/document/d/1ymul6X3DQH...   \n",
+      "1   Malvin G.  https://docs.google.com/document/d/1zuWjBGbGVz...   \n",
+      "2      Callum  https://docs.google.com/document/d/16Li0PY9WG5...   \n",
+      "3  Ari Zerner                     https://arizerner.com/date-me/   \n",
+      "4      Aeneas  https://docs.google.com/document/d/e/2PACX-1vS...   \n",
+      "\n",
+      "                                         ProfileText  \n",
+      "0  ﻿Hi!\\r\\nThis is a dating doc, I’m a 25 year ol...  \n",
+      "1                 Could not extract document content  \n",
+      "2  ﻿In as many words\\r\\n\\r\\n\\r\\nTo love and be lo...  \n",
+      "3  Ari's Date Me Doc | Ari Zerner's Demesne\\nAri ...  \n",
+      "4                 Could not extract document content  \n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "import pandas as pd\n",
+    "import time\n",
+    "from urllib.parse import urlparse\n",
     "\n",
+    "def extract_google_doc_text(url):\n",
+    "    \"\"\"Extract text from a Google Docs URL\"\"\"\n",
+    "    try:\n",
+    "        # Convert to export URL\n",
+    "        doc_id = url.split('/d/')[1].split('/')[0]\n",
+    "        export_url = f'https://docs.google.com/document/d/{doc_id}/export?format=txt'\n",
+    "        \n",
+    "        response = requests.get(export_url, headers={\n",
+    "            'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/58.0.3029.110 Safari/537.3'\n",
+    "        }, timeout=10)\n",
+    "        \n",
+    "        if response.status_code == 200:\n",
+    "            return response.text\n",
+    "        return \"Could not extract document content\"\n",
+    "    \n",
+    "    except Exception as e:\n",
+    "        return f\"Error extracting document: {str(e)}\"\n",
+    "\n",
+    "def extract_general_page_text(url):\n",
+    "    \"\"\"Extract text from a general webpage\"\"\"\n",
+    "    try:\n",
+    "        response = requests.get(url, headers={\n",
+    "            'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/58.0.3029.110 Safari/537.3'\n",
+    "        }, timeout=10)\n",
+    "        \n",
+    "        if response.status_code == 200:\n",
+    "            soup = BeautifulSoup(response.content, 'html.parser')\n",
+    "            return soup.get_text(separator='\\n', strip=True)\n",
+    "        return \"Could not extract page content\"\n",
+    "    \n",
+    "    except Exception as e:\n",
+    "        return f\"Error extracting page: {str(e)}\"\n",
+    "\n",
+    "def get_dating_data(df_row):\n",
+    "    link = df_row['ProfileLink']\n",
+    "    if not link:\n",
+    "        df_row['ProfileText'] = 'No link available'\n",
+    "        return df_row\n",
+    "    \n",
+    "    try:\n",
+    "        # Check if Google Doc\n",
+    "        if 'docs.google.com/document/' in link:\n",
+    "            text = extract_google_doc_text(link)\n",
+    "        else:\n",
+    "            text = extract_general_page_text(link)\n",
+    "        \n",
+    "        df_row['ProfileText'] = text\n",
+    "        time.sleep(1)  # Be polite with requests\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        df_row['ProfileText'] = f\"Error processing link: {str(e)}\"\n",
+    "    \n",
+    "    return df_row\n",
+    "\n",
+    "# Modify your main block to use this:\n",
     "if __name__ == \"__main__\":\n",
     "    df = scrape_date_me_directory()\n",
     "    if df is not None:\n",
-    "        print(\"Successfully scraped data:\")\n",
-    "        print(df.head())\n",
-    "        # To save to CSV:\n",
-    "        # df.to_csv('date_me_directory.csv', index=False)\n",
+    "        print(\"Processing profile links...\")\n",
+    "        # Process first 5 rows as example (remove [0:5] to process all)\n",
+    "        df = df[0:5].apply(get_dating_data, axis=1)\n",
+    "        \n",
+    "        print(\"\\nSample results:\")\n",
+    "        print(df[['Name', 'ProfileLink', 'ProfileText']].head())\n",
+    "        \n",
+    "        # To save full results:\n",
+    "        # df.to_csv('date_me_directory_with_text.csv', index=False)\n",
     "    else:\n",
     "        print(\"Failed to scrape data\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('date_me_directory_with_text.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>ProfileLink</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>InterestedIn</th>\n",
+       "      <th>Style</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>LocationFlexibility</th>\n",
+       "      <th>Contact</th>\n",
+       "      <th>LastUpdated</th>\n",
+       "      <th>ProfileText</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Gabin</td>\n",
+       "      <td>https://docs.google.com/document/d/1ymul6X3DQH...</td>\n",
+       "      <td>25</td>\n",
+       "      <td>M</td>\n",
+       "      <td>F, NB</td>\n",
+       "      <td>Any</td>\n",
+       "      <td>Central Europe, South of France</td>\n",
+       "      <td>Some</td>\n",
+       "      <td>GabinDatingDoc@proton.me</td>\n",
+       "      <td>2025-03-07</td>\n",
+       "      <td>﻿Hi!\\r\\nThis is a dating doc, I’m a 25 year ol...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Malvin G.</td>\n",
+       "      <td>https://docs.google.com/document/d/1zuWjBGbGVz...</td>\n",
+       "      <td>34</td>\n",
+       "      <td>M</td>\n",
+       "      <td>F</td>\n",
+       "      <td>mono</td>\n",
+       "      <td>San Francisco Bay Area, NYC, Central Europe, D...</td>\n",
+       "      <td>Flexible</td>\n",
+       "      <td>https://docs.google.com/forms/d/1-opeZgl3qdr4p...</td>\n",
+       "      <td>2025-03-07</td>\n",
+       "      <td>Could not extract document content</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Callum</td>\n",
+       "      <td>https://docs.google.com/document/d/16Li0PY9WG5...</td>\n",
+       "      <td>40</td>\n",
+       "      <td>M</td>\n",
+       "      <td>F</td>\n",
+       "      <td>mono</td>\n",
+       "      <td>UK</td>\n",
+       "      <td>Flexible</td>\n",
+       "      <td>callumcallum109@outlook.com</td>\n",
+       "      <td>2025-03-04</td>\n",
+       "      <td>﻿In as many words\\r\\n\\r\\n\\r\\nTo love and be lo...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Ari Zerner</td>\n",
+       "      <td>https://arizerner.com/date-me/</td>\n",
+       "      <td>27</td>\n",
+       "      <td>M</td>\n",
+       "      <td>F, NB</td>\n",
+       "      <td>poly</td>\n",
+       "      <td>San Francisco Bay Area, Philadelphia</td>\n",
+       "      <td>Some</td>\n",
+       "      <td>ari@zerner.com</td>\n",
+       "      <td>2025-02-24</td>\n",
+       "      <td>Ari's Date Me Doc | Ari Zerner's Demesne\\nAri ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Aeneas</td>\n",
+       "      <td>https://docs.google.com/document/d/e/2PACX-1vS...</td>\n",
+       "      <td>29</td>\n",
+       "      <td>M</td>\n",
+       "      <td>F</td>\n",
+       "      <td>mono</td>\n",
+       "      <td>Flexible</td>\n",
+       "      <td>Flexible</td>\n",
+       "      <td>aokook@gmail.com</td>\n",
+       "      <td>2025-02-20</td>\n",
+       "      <td>Could not extract document content</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Name                                        ProfileLink Age Gender  \\\n",
+       "0       Gabin  https://docs.google.com/document/d/1ymul6X3DQH...  25      M   \n",
+       "1   Malvin G.  https://docs.google.com/document/d/1zuWjBGbGVz...  34      M   \n",
+       "2      Callum  https://docs.google.com/document/d/16Li0PY9WG5...  40      M   \n",
+       "3  Ari Zerner                     https://arizerner.com/date-me/  27      M   \n",
+       "4      Aeneas  https://docs.google.com/document/d/e/2PACX-1vS...  29      M   \n",
+       "\n",
+       "  InterestedIn Style                                           Location  \\\n",
+       "0        F, NB   Any                    Central Europe, South of France   \n",
+       "1            F  mono  San Francisco Bay Area, NYC, Central Europe, D...   \n",
+       "2            F  mono                                                 UK   \n",
+       "3        F, NB  poly               San Francisco Bay Area, Philadelphia   \n",
+       "4            F  mono                                           Flexible   \n",
+       "\n",
+       "  LocationFlexibility                                            Contact  \\\n",
+       "0                Some                           GabinDatingDoc@proton.me   \n",
+       "1            Flexible  https://docs.google.com/forms/d/1-opeZgl3qdr4p...   \n",
+       "2            Flexible                        callumcallum109@outlook.com   \n",
+       "3                Some                                     ari@zerner.com   \n",
+       "4            Flexible                                   aokook@gmail.com   \n",
+       "\n",
+       "  LastUpdated                                        ProfileText  \n",
+       "0  2025-03-07  ﻿Hi!\\r\\nThis is a dating doc, I’m a 25 year ol...  \n",
+       "1  2025-03-07                 Could not extract document content  \n",
+       "2  2025-03-04  ﻿In as many words\\r\\n\\r\\n\\r\\nTo love and be lo...  \n",
+       "3  2025-02-24  Ari's Date Me Doc | Ari Zerner's Demesne\\nAri ...  \n",
+       "4  2025-02-20                 Could not extract document content  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
