--- a/data-ingest/main.ipynb
+++ b/data-ingest/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
     "    if df is not None:\n",
     "        print(\"Processing profile links...\")\n",
     "        # Process first 5 rows as example (remove [0:5] to process all)\n",
-    "        df = df[0:5].apply(get_dating_data, axis=1)\n",
+    "        df = df.apply(get_dating_data, axis=1)\n",
     "        \n",
     "        print(\"\\nSample results:\")\n",
     "        print(df[['Name', 'ProfileLink', 'ProfileText']].head())\n",
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -293,41 +293,165 @@
        "      <td>2025-02-20</td>\n",
        "      <td>Could not extract document content</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>477</th>\n",
+       "      <td>Blaïse (bless)</td>\n",
+       "      <td>https://docs.google.com/document/d/1ndGs9G9SvG...</td>\n",
+       "      <td>38</td>\n",
+       "      <td>NB</td>\n",
+       "      <td>M</td>\n",
+       "      <td>mono</td>\n",
+       "      <td>Ladysmith BC</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Academia_nut@shaw.ca</td>\n",
+       "      <td>2022-10-14</td>\n",
+       "      <td>﻿Dating Stephen Blaïse Saint Clare\\r\\n\\r\\n\\r\\n...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>478</th>\n",
+       "      <td>Brian Tomasik</td>\n",
+       "      <td>https://briantomasik.com/my-dating-profile/</td>\n",
+       "      <td>35</td>\n",
+       "      <td>M</td>\n",
+       "      <td>F, NB</td>\n",
+       "      <td>mono</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>Flexible</td>\n",
+       "      <td></td>\n",
+       "      <td>2022-10-01</td>\n",
+       "      <td>My dating profile\\nHome\\n•\\nWritings\\nMy datin...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>479</th>\n",
+       "      <td>Wes</td>\n",
+       "      <td>https://docs.google.com/document/d/1w2jH3CRis1...</td>\n",
+       "      <td>39</td>\n",
+       "      <td>M</td>\n",
+       "      <td>F</td>\n",
+       "      <td>poly</td>\n",
+       "      <td>Collingswood, NJ</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>2022-09-29</td>\n",
+       "      <td>﻿BESPOKE 1983 NONMONOGAMOUS DAD MODEL, AVAILAB...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>480</th>\n",
+       "      <td>Mercer</td>\n",
+       "      <td>https://docs.google.com/document/d/1FUcf4P06yV...</td>\n",
+       "      <td>22</td>\n",
+       "      <td>M</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>NYC</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>2022-09-29</td>\n",
+       "      <td>Could not extract document content</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>481</th>\n",
+       "      <td>Bhargab Acharya</td>\n",
+       "      <td>https://bhargab.com.np/posts/dating-profile/</td>\n",
+       "      <td>27</td>\n",
+       "      <td>M</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>2022-09-29</td>\n",
+       "      <td>Could not extract page content</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>482 rows × 11 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         Name                                        ProfileLink Age Gender  \\\n",
-       "0       Gabin  https://docs.google.com/document/d/1ymul6X3DQH...  25      M   \n",
-       "1   Malvin G.  https://docs.google.com/document/d/1zuWjBGbGVz...  34      M   \n",
-       "2      Callum  https://docs.google.com/document/d/16Li0PY9WG5...  40      M   \n",
-       "3  Ari Zerner                     https://arizerner.com/date-me/  27      M   \n",
-       "4      Aeneas  https://docs.google.com/document/d/e/2PACX-1vS...  29      M   \n",
+       "                Name                                        ProfileLink Age  \\\n",
+       "0              Gabin  https://docs.google.com/document/d/1ymul6X3DQH...  25   \n",
+       "1          Malvin G.  https://docs.google.com/document/d/1zuWjBGbGVz...  34   \n",
+       "2             Callum  https://docs.google.com/document/d/16Li0PY9WG5...  40   \n",
+       "3         Ari Zerner                     https://arizerner.com/date-me/  27   \n",
+       "4             Aeneas  https://docs.google.com/document/d/e/2PACX-1vS...  29   \n",
+       "..               ...                                                ...  ..   \n",
+       "477   Blaïse (bless)  https://docs.google.com/document/d/1ndGs9G9SvG...  38   \n",
+       "478    Brian Tomasik        https://briantomasik.com/my-dating-profile/  35   \n",
+       "479              Wes  https://docs.google.com/document/d/1w2jH3CRis1...  39   \n",
+       "480           Mercer  https://docs.google.com/document/d/1FUcf4P06yV...  22   \n",
+       "481  Bhargab Acharya       https://bhargab.com.np/posts/dating-profile/  27   \n",
        "\n",
-       "  InterestedIn Style                                           Location  \\\n",
-       "0        F, NB   Any                    Central Europe, South of France   \n",
-       "1            F  mono  San Francisco Bay Area, NYC, Central Europe, D...   \n",
-       "2            F  mono                                                 UK   \n",
-       "3        F, NB  poly               San Francisco Bay Area, Philadelphia   \n",
-       "4            F  mono                                           Flexible   \n",
+       "    Gender InterestedIn Style  \\\n",
+       "0        M        F, NB   Any   \n",
+       "1        M            F  mono   \n",
+       "2        M            F  mono   \n",
+       "3        M        F, NB  poly   \n",
+       "4        M            F  mono   \n",
+       "..     ...          ...   ...   \n",
+       "477     NB            M  mono   \n",
+       "478      M        F, NB  mono   \n",
+       "479      M            F  poly   \n",
+       "480      M                      \n",
+       "481      M                      \n",
        "\n",
-       "  LocationFlexibility                                            Contact  \\\n",
-       "0                Some                           GabinDatingDoc@proton.me   \n",
-       "1            Flexible  https://docs.google.com/forms/d/1-opeZgl3qdr4p...   \n",
-       "2            Flexible                        callumcallum109@outlook.com   \n",
-       "3                Some                                     ari@zerner.com   \n",
-       "4            Flexible                                   aokook@gmail.com   \n",
+       "                                              Location LocationFlexibility  \\\n",
+       "0                      Central Europe, South of France                Some   \n",
+       "1    San Francisco Bay Area, NYC, Central Europe, D...            Flexible   \n",
+       "2                                                   UK            Flexible   \n",
+       "3                 San Francisco Bay Area, Philadelphia                Some   \n",
+       "4                                             Flexible            Flexible   \n",
+       "..                                                 ...                 ...   \n",
+       "477                                       Ladysmith BC                None   \n",
+       "478                                                 NY            Flexible   \n",
+       "479                                   Collingswood, NJ                       \n",
+       "480                                                NYC                       \n",
+       "481                                                                          \n",
        "\n",
-       "  LastUpdated                                        ProfileText  \n",
-       "0  2025-03-07  ﻿Hi!\\r\\nThis is a dating doc, I’m a 25 year ol...  \n",
-       "1  2025-03-07                 Could not extract document content  \n",
-       "2  2025-03-04  ﻿In as many words\\r\\n\\r\\n\\r\\nTo love and be lo...  \n",
-       "3  2025-02-24  Ari's Date Me Doc | Ari Zerner's Demesne\\nAri ...  \n",
-       "4  2025-02-20                 Could not extract document content  "
+       "                                               Contact LastUpdated  \\\n",
+       "0                             GabinDatingDoc@proton.me  2025-03-07   \n",
+       "1    https://docs.google.com/forms/d/1-opeZgl3qdr4p...  2025-03-07   \n",
+       "2                          callumcallum109@outlook.com  2025-03-04   \n",
+       "3                                       ari@zerner.com  2025-02-24   \n",
+       "4                                     aokook@gmail.com  2025-02-20   \n",
+       "..                                                 ...         ...   \n",
+       "477                               Academia_nut@shaw.ca  2022-10-14   \n",
+       "478                                                     2022-10-01   \n",
+       "479                                                     2022-09-29   \n",
+       "480                                                     2022-09-29   \n",
+       "481                                                     2022-09-29   \n",
+       "\n",
+       "                                           ProfileText  \n",
+       "0    ﻿Hi!\\r\\nThis is a dating doc, I’m a 25 year ol...  \n",
+       "1                   Could not extract document content  \n",
+       "2    ﻿In as many words\\r\\n\\r\\n\\r\\nTo love and be lo...  \n",
+       "3    Ari's Date Me Doc | Ari Zerner's Demesne\\nAri ...  \n",
+       "4                   Could not extract document content  \n",
+       "..                                                 ...  \n",
+       "477  ﻿Dating Stephen Blaïse Saint Clare\\r\\n\\r\\n\\r\\n...  \n",
+       "478  My dating profile\\nHome\\n•\\nWritings\\nMy datin...  \n",
+       "479  ﻿BESPOKE 1983 NONMONOGAMOUS DAD MODEL, AVAILAB...  \n",
+       "480                 Could not extract document content  \n",
+       "481                     Could not extract page content  \n",
+       "\n",
+       "[482 rows x 11 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
