better export const system to export as array not string disguised as array

--- a/make-matches/main.ipynb
+++ b/make-matches/main.ipynb
@@ -16721,6 +16721,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('export_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
